syntax = "proto3";
package sso.users;
option go_package = "sso.users.v1;users";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc Create (CreateRequest) returns (UserResponse);
  rpc Get (GetRequest) returns (UserResponse);
  rpc Update (UpdateRequest) returns (UserResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc List (ListRequest) returns (ListResponse);
}

message User {
  string id = 1;
  string client_id = 2;
  string email = 3;
  optional string full_name = 4;
  optional string phone = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  optional google.protobuf.Timestamp deleted_at = 8;
}

message UserResponse {
  User user = 1;
}

message CreateRequest {
  string client_id = 1;
  string email = 2;
  string password = 3;
  optional string full_name = 4;
  optional string phone = 5;
}

message GetRequest {
  string client_id = 1;
  oneof identifier {
    string id = 2;
    string email = 3;
  }
  bool include_deleted = 4;
}

message UpdateRequest {
  string id = 1;
  string client_id = 2;
  optional string email = 3;
  optional string full_name = 4;
  optional string phone = 5;
  optional string password = 6;
}

message DeleteRequest {
  string id = 1;
  string client_id = 2;
}

message DeleteResponse {
  bool success = 1;
  google.protobuf.Timestamp deleted_at = 2;
}

message ListRequest {
  string client_id = 1;
  int32 page = 2;
  int32 count = 3;
  bool include_deleted = 4;
}

message ListResponse {
  repeated User users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 count = 4;
}